--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "buffer": "^6.0.3",
     "firebase": "^8.6.5",
     "node-sass": "^7.0.1",
+    "qrcode.react": "^3.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
